# Agentic-Practice-Codes

deep_research_openAI/: .env  deep_research.py  email_agent.py  main.py  planner_agent.py  pyproject.toml  research_manager.py  search_agent.py  writer_agent.py
stock_picker/: pyproject.toml
stock_picker/knowledge/: user_preference.txt
stock_picker/output/: decision.md  research_report.json  trending_companies.json
stock_picker/src/stock_picker/: crew.py  main.py
stock_picker_CrewAI/: report.md
stock_picker_CrewAI/output/: research_report.json
stock_predictor/: README.md  pyproject.toml
stock_predictor/knowledge/: user_preference.txt
stock_predictor/src/stock_predictor/: crew.py  main.py
stock_predictor/src/stock_predictor/config/: agents.yaml  tasks.yaml
