[project]
name = "stock_predictor"
version = "0.1.0"
description = "stock_predictor using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.121.0,<1.0.0"
]

[project.scripts]
stock_predictor = "stock_predictor.main:run"
run_crew = "stock_predictor.main:run"
train = "stock_predictor.main:train"
replay = "stock_predictor.main:replay"
test = "stock_predictor.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
